[gd_scene load_steps=4 format=3 uid="uid://c7ohlumowgh6r"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_016xy"]
[ext_resource type="Script" path="res://ui.gd" id="3_a1s4l"]
[ext_resource type="Script" path="res://graph_field.gd" id="3_jotwo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.678968, 0.78234)
script = ExtResource("1_016xy")

[node name="Ui" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 1044.0
offset_bottom = 466.0
scale = Vector2(1.42051, 1.26641)
script = ExtResource("3_a1s4l")

[node name="FunctionSelector" type="GridContainer" parent="Ui"]
layout_mode = 0
offset_left = 597.0
offset_top = 69.0
offset_right = 900.0
offset_bottom = 269.0

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/FunctionSelector"]
layout_mode = 2

[node name="LogButton" type="Button" parent="Ui/FunctionSelector/VBoxContainer"]
layout_mode = 2
tooltip_text = "
"
text = "логарифмическая"

[node name="SinButton" type="Button" parent="Ui/FunctionSelector/VBoxContainer"]
layout_mode = 2
tooltip_text = "синусоида"
text = "синусоида"

[node name="PoliButton" type="Button" parent="Ui/FunctionSelector/VBoxContainer"]
layout_mode = 2
text = "полиномиальная"

[node name="ExpButton" type="Button" parent="Ui/FunctionSelector/VBoxContainer"]
layout_mode = 2
text = "экспоненциальная"

[node name="ParameterWindow" type="VBoxContainer" parent="Ui"]
layout_mode = 0
offset_left = 598.0
offset_top = 240.0
offset_right = 861.0
offset_bottom = 377.0

[node name="Label_a" type="Label" parent="Ui/ParameterWindow"]
layout_mode = 2
text = "a"

[node name="LineEdit_a" type="LineEdit" parent="Ui/ParameterWindow"]
layout_mode = 2

[node name="Label_b" type="Label" parent="Ui/ParameterWindow"]
layout_mode = 2
text = "b"

[node name="LineEdit_b" type="LineEdit" parent="Ui/ParameterWindow"]
layout_mode = 2

[node name="Label_c" type="Label" parent="Ui/ParameterWindow"]
layout_mode = 2
text = "c"

[node name="LineEdit_c" type="LineEdit" parent="Ui/ParameterWindow"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Ui/ParameterWindow"]
layout_mode = 2
text = "Save"

[node name="CanvasLayer" type="CanvasLayer" parent="Ui"]

[node name="GraphField" type="Control" parent="."]
anchors_preset = 0
offset_left = 1267.0
offset_top = 125.0
offset_right = 1667.0
offset_bottom = 525.0
script = ExtResource("3_jotwo")

[node name="GridContainer" type="GridContainer" parent="GraphField"]
layout_mode = 0
offset_left = -1267.0
offset_top = -125.0
offset_right = -1215.0
offset_bottom = -73.0
scale = Vector2(13.24, 11.28)
columns = 4

[node name="Control" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control2" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control3" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control4" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control5" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control6" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control7" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control8" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control9" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control10" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control11" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control12" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control13" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control14" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control15" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Control16" type="Control" parent="GraphField/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[connection signal="pressed" from="Ui/FunctionSelector/VBoxContainer/LogButton" to="GraphField" method="_on_log_button_pressed"]
[connection signal="pressed" from="Ui/FunctionSelector/VBoxContainer/SinButton" to="GraphField" method="_on_sin_button_pressed"]
[connection signal="pressed" from="Ui/FunctionSelector/VBoxContainer/PoliButton" to="GraphField" method="_on_poli_button_pressed"]
[connection signal="pressed" from="Ui/FunctionSelector/VBoxContainer/ExpButton" to="GraphField" method="_on_exp_button_pressed"]
[connection signal="text_changed" from="Ui/ParameterWindow/LineEdit_a" to="GraphField" method="_on_line_edit_a_text_changed"]
[connection signal="text_changed" from="Ui/ParameterWindow/LineEdit_b" to="GraphField" method="_on_line_edit_b_text_changed"]
[connection signal="text_changed" from="Ui/ParameterWindow/LineEdit_c" to="GraphField" method="_on_line_edit_c_text_changed"]
[connection signal="pressed" from="Ui/ParameterWindow/SaveButton" to="GraphField" method="_on_save_button_pressed"]
